--- a/.github/workflows/lowlight.yml
+++ b/.github/workflows/lowlight.yml
@@ -12,7 +12,8 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Metrics 1
+        uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
           # The following scopes are required:
@@ -26,9 +27,16 @@ jobs:
 
           # Options
           user: esterified
+          filename: github-metrics.svg
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Dhaka
+          config_twemoji: yes
+          
+          optimize: svg
+          experimental_features: --optimize-svg
+          
+          use_prebuilt_image: yes
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
