--- a/.github/workflows/lowlight.yml
+++ b/.github/workflows/lowlight.yml
@@ -64,3 +64,44 @@ jobs:
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
+          
+      - name: Metrics 2
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          # Options
+          user: esterified
+          template: classic
+          base: ""
+          config_timezone: Asia/Dhaka
+          plugin_calendar: yes
+          plugin_calendar_limit: 1
+          plugin_habits: yes
+          plugin_habits_charts: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_types: commit
+          plugin_skyline: yes
+          plugin_skyline_compatibility: yes
+          plugin_skyline_frames: 60
+          plugin_skyline_quality: 0.5
+          plugin_skyline_settings: |
+           {"url": "https://skyline.github.com/${login}/${year}",
+            "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+            "wait": 1,
+            "hide": "button, footer, a"
+           }
+          
+          plugin_skyline_year: 2022
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+          plugin_topics_sort: stars
