--- a/.github/workflows/lowlight.yml
+++ b/.github/workflows/lowlight.yml
@@ -75,6 +75,10 @@ jobs:
           template: classic
           base: ""
           config_timezone: Asia/Dhaka
+          
+          optimize: svg
+          experimental_features: --optimize-svg
+          
           plugin_calendar: yes
           plugin_calendar_limit: 1
           plugin_habits: yes
